tests/ui/issues/issue-18058.rs
impl Undefined {}
//~^ ERROR cannot find type `Undefined` in this scope

fn main() {}
